Best ASD Project One-still non-functioning save and wont pull data from json

--- a/Wolflinx/gitHub.html
+++ b/Wolflinx/gitHub.html
@@ -26,7 +26,7 @@
  		I followed along with the video but still can't get them to show up as the the "live" app when clicked on.
  		
  		<ul><a href="https://github.com/Phantomwriter/abapp" data-ajax="false" data-role="listview" id="gitHublinks">Git Hub Page</a></ul>
- 	 	<ul><a href="http://www.youtube.com/watch?v=lvzK24MMpTQ&feature=youtube_gdata_player" data-ajax="false" data-role="listview" id="gitHublinks">Project Video Youtube link</a></ul>
+ 	 	<ul><a href=http://phantomwriter.github.com/asd/Wolflinx/index.html data-ajax="false" data-role="listview" id="gitHublinks">Project Video Youtube link</a></ul>
 
  	</div>
  		<script src="js/newMemberJson.js" type="text/javascript"></script>
