--- a/Wolflinx/index.html
+++ b/Wolflinx/index.html
@@ -93,9 +93,9 @@ HTML page with Jquery
 					<li><a href="#signupPage" data-ajax="false" data-role="button"  data-icon="home" data-theme="a">Sign-in</a></li>
 					<li><a href="gitHub.html" data-ajax="false" data-role="button" data-icon="gear" data-theme="a">Git Links</a></li>
 				</ul>			
-		    </div>/*navbar closer*/	
-		</div>/*Footer closer*/
-	</section>/*section closer*/
+		    </div>	
+		</div>
+	</section>
 
 	
 								<!--Sign-up Form Page-->
