Week two commit with db couch, xml, csv and json data pages included

--- a/Wolflinx/index.html
+++ b/Wolflinx/index.html
@@ -614,10 +614,7 @@ HTML page with Jquery
 		</div>
 	
 	<div data-role="content">
-		<div data-role="listview" data-theme="a" id="members">
-			
-			
-			
+		<div data-role="listview" data-theme="a" id="xmlData">
 			<p> Here's the required XML data.</p>
 		</div>
 	</div>
@@ -640,13 +637,10 @@ HTML page with Jquery
 		</div>
 	
 	<div data-role="content">
-		<div data-role="listview" data-theme="a" id="jsonData">
 			<p> Here's the required JSON data.</p>
-			<ul data-role="listview" id="jsonData">
-				<div id="jTitle">
-				</div>
-			</ul>
-		</div>
+			<div data-role="listview" id="jsonData">
+				
+			</div>
 	</div>
 	<div data-role="footer">
 		<div data-role="navbar" data-position="fixed" >
